# pyscheme

./: README.md  pyproject.toml
src/: pyscheme.py  test_pyscheme.py
src/pyscheme/: pyscheme.py  test_pyscheme.py
versions/chatgpt/src/pyscheme/: pyscheme.py  test_errors.py
versions/claude/: README.md
versions/claude/src/pyscheme/: pyscheme.py  test_pyscheme.py
